# MCRPPy

./: .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/bibliography/: index.doctree
.doctrees/feature_1/: api.doctree  definition.doctree  index.doctree
.github/workflows/: ci.yml  docs.yml
bibliography/: index.html
feature_1/: api.html  definition.html  index.html
local_teset_draft/: try_kd_tree.py
notebooks/: MC_save_data.py  MC_save_data_2d.py  MC_save_data_3d.py  MC_save_data_4d.py  MC_save_data_7d.py  README.md  companion_paper.ipynb  dpp.ipynb  gravitational_allocation_and_extreme_repelled.ipynb  hyperuniformity.ipynb  mc_results_2d_data.pickle  notebook_asked_by_Rémi.ipynb  numerical_integration.ipynb  numerical_integration_clean.ipynb  paper_figures.ipynb  paper_figures_clean.ipynb  structure_factor_and_pcf.ipynb  test.html  time_functions.py  tutorial_gravitational_allocation.ipynb  tutorial_monte_carlo_methods.ipynb  tutorial_notebook.ipynb  tutorial_sample_repelled_point_pattern.ipynb  variance_of_linear_statistics.ipynb
notebooks/data/: big_repelle_pp_3D.pickle  mc_results_2d.pickle  mc_results_2d_final.pickle  mc_results_3d.pickle  mc_results_3d_final.pickle  mc_results_4d.pickle  mc_results_4d_final.pickle  mc_results_5d.pickle  mc_results_5d_final.pickle  mc_results_6d.pickle  mc_results_7d.pickle  mc_results_7d_final.pickle  mc_std_3d_wrt_epsilon.pickle
python_file_to_test/: numerical_integration.py
save_data/: MC_save_data.py  MC_save_data_2d.py  MC_save_data_3d.py  MC_save_data_4d.py  MC_save_data_5d.py  MC_save_data_6d.py  MC_save_data_7d.py  MC_save_data_9d.py
src/GPPY/: MC_save_data.py  gravitational_force.py  gravity_point_process.py  gravity_point_process_inhom.py  monte_carlo_test_functions.py  monte_carlo_tests_setup.py  numerical_integration.py  point_pattern.py  point_processes.py  spatial_windows.py  utils.py
src/mcrppy/: coulomb_force.py  equilibrium_point_process.py  gravitational_allocation.py  gravity_point_process_inhom.py  integrand_test_functions.py  monte_carlo_base.py  monte_carlo_methods.py  monte_carlo_setup.py  plot_functions.py  point_pattern.py  point_processes.py  repelled_point_process.py  utils.py
src/rpppy/: coulomb_force.py  equilibrium_point_process.py  gravity_point_process.py  gravity_point_process_inhom.py  integrand_test_functions.py  monte_carlo_methods.py  monte_carlo_test_functions.py  monte_carlo_tests_setup.py  numerical_integration.py  plot_functions.py  point_pattern.py  point_processes.py  repelled_point_process.py  utils.py
tests/: test_coulomb_force.py  test_force.py  test_gravitational_allocation.py  test_gravitational_force.py  test_gravity_point_process.py  test_integrand_test_functions.py  test_monte_carlo_base.py  test_monte_carlo_methods.py  test_numercial_integration.py  test_point_processes.py  test_repelled_point_process.py  test_spatial_window.py  test_spatial_windows.py  test_utils.py
