[tool.poetry]
name = "gppy"
version = "0.1.0"
description = "Simulating a pushed point process from a Poisson point process"
license = "MIT"
authors = ["Diala Hawat <dialahawat7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
# structure-factor = "^2.1.1"
jupyter = { version = "^1.0.0", optional = true }
notebook = { version = "^6.5.2", optional = true }
scikit-learn = "^1.2.0"
numpy = "<=1.20.3"
pandas = "^1.5.3"
statsmodels = "^0.13.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
dppy = "^0.3.2"

[tool.pytest.ini_options]
# poetry run pytest
minversion = "6.0"
addopts = "-ra -q -vv --cov=packagename --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
